src/testData/analysis/hexEscapes.cr
"<error descr="Invalid hex escape">\x</error>"

"<error descr="Invalid hex escape">\xA</error>"

"<error descr="Invalid hex escape">\xA</error>z"

"\xA1"

"\xA1c"

"<error descr="Invalid hex escape">\x</error>x"

"<error descr="Invalid hex escape">\x</error>xx"